<resources>
    <string name="app_name">Hiji</string>
    <string name="pathologyBtn">J\'ai un problème</string>
    <string name="chatBtn">Identifiez votre problème en discutant avec Hiji</string>
    <string name="headerProblem">Quel est votre problème ?</string>
    <string name="assistantHeader">Mon assistant hiji</string>
    <string name="searchBarPathologyText">Rechercher une pathologie</string>
    <string name="checkUpBtn">Checkup, certificat</string>
    <string name="newOrderBtn">Renouvellement d\'ordonnance</string>
    <string name="followedBtn">Suivi de traitement</string>
    <string name="getSpecialistBtn">Trouver un spécialiste</string>
    <string name="helloMsg">Bonjour, je vais vous aider à pré-identifier votre problème, cela facilitera le travail du médecin lors de votre consultation</string>
    <string name="pathologyFoundMsg">Grâce à vos réponses, nous vous avons pré-identifié la pathologie :\u0020</string>
    <string name="pathologyAfterMsg">Maintenant que nous avons déterminé de quelle pathologie vous pourriez être atteint, passons à la prise de consultation avec un médecin.</string>
    <string name="emergencyMsg">APPELLEZ LES URGENCES</string>
    <string name="contactDoctorMsg">Qui souhaitez-vous consulter?</string>
    <string name="personnalDoctor">Mon Médecin</string>
    <string name="otherDoctor">Autre médecin</string>
    <string name="callEmergency">Appeller le 112</string>
    <string name="welcome">hiji, la consultation simplifiée</string>
    <string name="phoneNumber">Saisissez votre numéro de téléphone</string>
    <string name="homeInfo">Cette application n’est pas une application d’urgences</string>
    <string name="entries_welcome">Bienvenue Florent,</string>
    <string name="entries_reason">Pourquoi consultez-vous aujourd\'hui ?</string>
    <string name="entries_probleme">J’ai un problème</string>
    <string name="entries_checkup">Faire un checkup santé</string>
    <string name="entries_renouvellement">Renouveller une ordonnance</string>
    <string name="entries_suivi">Faire un suivi de traitement</string>
    <string name="entries_specialiste">J’ai besoin d’un spécialiste</string>
    <string name="default_doctor_first_name">Marie</string>
    <string name="default_doctor_last_name">Fournier</string>
    <string name="error_doctor_not_found_title">Patience …</string>
    <string name="error_doctor_not_found_text">Aucun docteur ne traite cette pathologie pour le moment.</string>
    <string name="header_entry">Quel est votre problème?</string>
</resources>
