<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tretiakoff.sifg2.activity.MainActivity">

    <Button
        android:id="@+id/chatBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chatBtn"
        tools:layout_editor_absoluteX="131dp"
        tools:layout_editor_absoluteY="68dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkUpBtn"
        tools:layout_editor_absoluteX="131dp"
        tools:layout_editor_absoluteY="165dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newOrderBtn"
        tools:layout_editor_absoluteX="131dp"
        tools:layout_editor_absoluteY="271dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/followedBtn"
        tools:layout_editor_absoluteX="131dp"
        tools:layout_editor_absoluteY="373dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getSpecialistBtn"
        tools:layout_editor_absoluteX="131dp"
        tools:layout_editor_absoluteY="446dp" />

</android.support.constraint.ConstraintLayout>
