<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".activity.EntryActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:contentDescription="logo"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/entry_title"
        android:layout_width="0dp"
        android:layout_height="28dp"
        android:layout_marginTop="24dp"
        android:text="@string/entries_welcome"
        android:textAllCaps="false"
        android:textColor="@color/color_title"
        android:textSize="20sp"
        android:typeface="monospace"
        app:fontFamily="@font/muli_bold"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="246dp"
        android:layout_height="0dp"
        android:lineSpacingExtra="0sp"
        android:text="@string/entries_title"
        android:textColor="@color/color_outer_space"
        android:textSize="20sp"
        app:fontFamily="@font/muli_bold"
        app:layout_constraintStart_toStartOf="@+id/entry_title"
        app:layout_constraintTop_toBottomOf="@+id/entry_title" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="24dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/problem_Btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/cerise_border"
                android:gravity="center_vertical"
                android:paddingBottom="38dp"
                android:paddingLeft="24dp"
                android:paddingTop="38dp"
                android:text="@string/entries_probleme"
                android:textAllCaps="false"
                android:textColor="@color/cardview_light_background"
                android:textSize="16dp"
                app:fontFamily="@font/muli_bold"
                app:layout_constraintBottom_toTopOf="@+id/checkup_Btn"
                app:layout_constraintEnd_toEndOf="@+id/checkup_Btn"
                app:layout_constraintStart_toStartOf="@+id/checkup_Btn"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/checkup_Btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/java2_border"
                android:gravity="center_vertical"
                android:paddingBottom="38dp"
                android:paddingLeft="24dp"
                android:paddingTop="38dp"
                android:text="@string/entries_checkup"
                android:textAllCaps="false"
                android:textColor="@color/cardview_light_background"
                android:textSize="16dp"
                app:fontFamily="@font/muli_bold"
                app:layout_constraintBottom_toTopOf="@+id/renouvellement_Btn"
                app:layout_constraintEnd_toEndOf="@+id/renouvellement_Btn"
                app:layout_constraintStart_toStartOf="@+id/renouvellement_Btn" />

            <Button
                android:id="@+id/renouvellement_Btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/sundy_border"
                android:gravity="center_vertical"
                android:paddingBottom="38dp"
                android:paddingLeft="24dp"
                android:paddingTop="38dp"
                android:text="Button"
                android:textAllCaps="false"
                android:textColor="@color/cardview_light_background"
                android:textSize="16dp"
                app:fontFamily="@font/muli_bold"
                app:layout_constraintBottom_toTopOf="@+id/suivi_Btn"
                app:layout_constraintEnd_toEndOf="@+id/suivi_Btn"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/suivi_Btn"
                tools:text="@string/entries_renouvellement" />

            <Button
                android:id="@+id/besoin_Btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/sun_border"
                android:contentDescription="@string/entries_specialiste"
                android:gravity="center_vertical"
                android:paddingBottom="38dp"
                android:paddingLeft="24dp"
                android:paddingTop="38dp"
                android:text="@string/entries_specialiste"
                android:textAllCaps="false"
                android:textColor="@color/cardview_light_background"
                android:textSize="16dp"
                app:fontFamily="@font/muli_bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/suivi_Btn"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/suivi_Btn" />

            <Button
                android:id="@+id/suivi_Btn"
                android:layout_width="379dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/java_border"
                android:gravity="center_vertical"
                android:paddingBottom="38dp"
                android:paddingLeft="24dp"
                android:paddingTop="38dp"
                android:text="Button"
                android:textAllCaps="false"
                android:textColor="@color/cardview_light_background"
                android:textSize="16dp"
                app:fontFamily="@font/muli_bold"
                app:layout_constraintBottom_toTopOf="@+id/besoin_Btn"
                tools:layout_editor_absoluteX="0dp"
                tools:text="@string/entries_suivi" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:elevation="5dp"
                android:src="@drawable/probleme"
                app:layout_constraintBottom_toBottomOf="@+id/problem_Btn"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:elevation="5dp"
                android:src="@drawable/checkup"
                app:layout_constraintBottom_toBottomOf="@+id/checkup_Btn"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:elevation="5dp"
                android:src="@drawable/renouvellement"
                app:layout_constraintBottom_toBottomOf="@+id/renouvellement_Btn"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:elevation="5dp"
                android:src="@drawable/suivi"
                app:layout_constraintBottom_toBottomOf="@+id/suivi_Btn"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:elevation="5dp"
                android:src="@drawable/specialiste"
                app:layout_constraintBottom_toBottomOf="@+id/besoin_Btn"
                app:layout_constraintEnd_toEndOf="@+id/besoin_Btn" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="142dp"
                android:layout_height="66dp"
                android:elevation="4dp"
                android:src="@drawable/shape_probleme"
                app:layout_constraintBottom_toBottomOf="@+id/problem_Btn"
                app:layout_constraintEnd_toEndOf="@+id/problem_Btn" />

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="128dp"
                android:layout_height="0dp"
                android:elevation="4dp"
                android:src="@drawable/shape_checkup"
                app:layout_constraintBottom_toBottomOf="@+id/checkup_Btn"
                app:layout_constraintEnd_toEndOf="@+id/checkup_Btn"
                app:layout_constraintTop_toTopOf="@+id/checkup_Btn" />

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="120dp"
                android:layout_height="71dp"
                android:elevation="4dp"
                android:src="@drawable/shape_renouvellement"
                app:layout_constraintBottom_toBottomOf="@+id/renouvellement_Btn"
                app:layout_constraintEnd_toEndOf="@+id/renouvellement_Btn" />

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="113dp"
                android:layout_height="74dp"
                android:elevation="4dp"
                android:src="@drawable/shape_suivi"
                app:layout_constraintBottom_toBottomOf="@+id/suivi_Btn"
                app:layout_constraintEnd_toEndOf="@+id/suivi_Btn" />

            <ImageView
                android:id="@+id/imageView14"
                android:layout_width="113dp"
                android:layout_height="78dp"
                android:elevation="4dp"
                android:src="@drawable/shape_specialiste"
                app:layout_constraintBottom_toBottomOf="@+id/besoin_Btn"
                app:layout_constraintEnd_toEndOf="parent" />

            <android.support.design.widget.BottomNavigationView
                android:layout_width="36dp"
                android:layout_height="36dp"
                tools:layout_editor_absoluteX="168dp"
                tools:layout_editor_absoluteY="362dp" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@color/cardview_light_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/cardview_light_background"
                android:paddingTop="30dp"
                android:text="Documents"
                android:stateListAnimator="@null"
                android:textAllCaps="false"
                app:layout_constraintBaseline_toBaselineOf="@+id/button14"
                app:layout_constraintEnd_toStartOf="@+id/button14"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/button14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/background_light"
                android:paddingTop="30dp"
                android:text="Consulstation"
                android:stateListAnimator="@null"
                android:textAllCaps="false"
                app:layout_constraintEnd_toStartOf="@+id/button12"
                app:layout_constraintStart_toEndOf="@+id/button13" />

            <Button
                android:id="@+id/button12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/cardview_light_background"
                android:paddingTop="30dp"
                android:text="Profil"
                android:stateListAnimator="@null"
                android:textAllCaps="false"
                app:layout_constraintBaseline_toBaselineOf="@+id/button14"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button14" />

            <ImageView
                android:id="@+id/imageView17"
                android:layout_width="14dp"
                android:layout_height="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:elevation="5dp"
                android:src="@drawable/user"
                app:layout_constraintEnd_toEndOf="@+id/button12"
                app:layout_constraintHorizontal_bias="0.551"
                app:layout_constraintStart_toStartOf="@+id/button12"
                app:layout_constraintTop_toTopOf="@+id/button12" />

            <ImageView
                android:id="@+id/imageView16"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:elevation="5dp"
                android:src="@drawable/logo"
                app:layout_constraintEnd_toEndOf="@+id/button14"
                app:layout_constraintStart_toStartOf="@+id/button14"
                app:layout_constraintTop_toTopOf="@+id/button14" />

            <ImageView
                android:id="@+id/imageView15"
                android:layout_width="14dp"
                android:layout_height="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:elevation="5dp"
                android:src="@drawable/document"
                app:layout_constraintEnd_toEndOf="@+id/button13"
                app:layout_constraintHorizontal_bias="0.483"
                app:layout_constraintStart_toStartOf="@+id/button13"
                app:layout_constraintTop_toTopOf="@+id/button13" />

        </android.support.constraint.ConstraintLayout>
    </android.support.design.widget.BottomNavigationView>

</android.support.constraint.ConstraintLayout>